Whitesmoke coloration on tabs fixed, was missing bottom border for the collapsed version and active was wrong in uncollapsed

--- a/client/css/aui.sass
+++ b/client/css/aui.sass
@@ -638,13 +638,13 @@ $nav-text: #C7CBD1
 
     .btn
       background: whitesmoke
+      border-bottom: 1px solid whitesmoke
       border-left: 1px solid #ced4da
       border-top: 1px solid #ced4da
       border-right: 1px solid #ced4da
       border-radius: .25rem .25rem 0 0
       margin-left: auto
       z-index: 2
-      border-bottom: 1px solid white
       height: 40px
 
       .dropdown-menu
@@ -665,11 +665,11 @@ $nav-text: #C7CBD1
       border-right: 1px solid rgba(255,255,255,0)
 
     .tab.active
-      background: white
+      background: whitesmoke
+      border-bottom: 1px solid whitesmoke
       border-left: 1px solid #ced4da
       border-top: 1px solid #ced4da
       border-right: 1px solid #ced4da
-      border-bottom: 1px solid white
       border-radius: .25rem .25rem 0 0
 
   // Checkboxes
